feat: adjust public API
